# ohtu-miniprojekti

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  tasks.py  test.bib
.github/workflows/: main.yml
data/: testi.db
docs/: commands.md  definition_of_done.md  report.md
src/: ReferenceLibrary.py  app.py  build.py  database.py  index.py  reference_reader.py  robotLibrary.py
src/entities/: book_reference.py  reference.py  web_reference.py
src/repositories/: book_reference_repo.py  web_reference_repo.py
src/services/: ReferenceServiceLibrary.py  bibtex_generator_service.py  book_reference_service.py  input_validator_service.py  reference_service.py  web_reference_service.py
src/tests/: add_reference.robot  book_reference_repo_test.py  create_bibtex_file.robot  database_test.py  reference.robot  resource.robot  view_references.robot
src/tests/repositories/: book_reference_repo_test.py  web_reference_repo_test.py
src/tests/robot/: add_book_reference.robot  add_reference.robot  add_tag.robot  add_web_reference.robot  delete_reference.robot  filter_by_tag.robot  resource.robot  view_references.robot
src/tests/services/: bibtex_generator_service_test.py  input_validator_test.py  reference_service_test.py
src/ui/: reference_reader.py  stub_ui.py  ui.py
