[tool.poetry]
name = "ohtu-miniprojekti"
version = "0.1.0"
description = ""
authors = ["Nikita Essine <nikita.essine@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
coverage = "^6.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
